--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="app">
-        <button onclick="PaymentForm('A001', {theme: true, recomended: 'USDT', sol: false, other: false})">Click</button>
+        <button onclick="PaymentForm('A001', {amount: 2, theme: false, recomended: 'USDT', sol: false, other: false, tpt: false})">Click</button>
     </div>
   </body>
 </html>
